--- a/index.html
+++ b/index.html
@@ -44,11 +44,6 @@
                 <button id="removeApplianceBtn" onclick="removeAppliance()">Remove Appliance</button>
             </div>
         </div>
-        <footer class="footer">
-            <button id="historyLogBtn" onclick="showHistoryLog()">
-                <img src="Images/History.png" alt="History" width="25" height="25"> History Log
-            </button>
-        </footer>
         <!-- Pop-up Modal -->
         <div id="popupScreen" class="popup hidden">
             <div class="popup-content">
@@ -57,6 +52,11 @@
             </div>
         </div>
     </div>
+    <footer id='Footer' class="End">
+        <button id="historyLogBtn" onclick="showHistoryLog()">
+            <img src="Images/History.png" alt="History" width="25" height="25"> History Log
+        </button>
+    </footer>
     <script src="back.js"></script>
 </body>
 </html>
